# InvitationBot

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.example.yaml
.github/workflows/: ci.yml
.sqlx/: query-2914baf5b52c365427365026155756867d70ea83725b99c90202a120fe7c5f0e.json  query-37529616a9843dece3092ceb2fb40ed3612df38dcd942886efde2d2447eb1da1.json  query-456c7b561e802e3361b3fd35b8a44bc7a03479cc9055aabc19ca0a605642e10a.json  query-515c9686deba60cd48f9aa81753e1c8dde578a66511412197cd56c3f61b0e4e6.json  query-7c368ac725549a5467b805eed187e51efe51983db4f267cd298624f3ed303a28.json  query-8366fa33c31a99c5d00d3f2b79e34295d71d150b4add0e380984bcfac4d0ed9c.json  query-87c9c7d12cb67cc508f90f46864c41835f91cec7de0120e9eff97c5887b1ad91.json  query-99459449269167a78ba63ac62a8db1fee3e3428126b6d6ccdd51a9c81b7d91c5.json  query-baf87e81fdfe25b1b379a826b007d85d6ca08d6b8a2d7d78cdf7dcfa0571b63c.json  query-c41d75131ce616f19ccc0ac7e3d26433d844b7242f3f5d635e770be755685478.json
src/: http_server.rs  main.rs
src/handlers/: guild_member_add.rs  mod.rs
src/http_server/: handlers.rs  server.rs
src/i18n/: en.yaml  mod.rs  zh-TW.yaml
src/migrations/: 20240101000000_create_tables.sql  mod.rs
src/public/: index.html  mod.rs
src/slash_commands/: inviter.rs  invites.rs  invites_leaderboard.rs  mod.rs  ping.rs
src/utils/: config.rs  db.rs  i18n.rs  mod.rs  test_helpers.rs
